test/Fail/UselessPrivateImport2.agda
{-# OPTIONS --warning=error #-}

module UselessPrivateImport2 where

private
  open import Common.Issue481ParametrizedModule Set
